# azure-windows

./: .gitignore  README.md  install.sh  pyproject.toml
.claude/commands/: awvm.md
.github/: CODEOWNERS
.github/workflows/: ci.yml
docs/: RECOVERY.md
launchd/: com.awvm.reaper.plist  com.awvm.smoke-test.plist
scripts/: awvm.py  bootstrap_backend.sh
skills/: awvm-connect.md  awvm-down.md  awvm-refresh-ip.md  awvm-status.md  awvm-up.md  awvm.md
terraform/: locals.tf  main.tf  outputs.tf  providers.tf  tailscale.ps1.tftpl  variables.tf
tests/: conftest.py  test_credential_store.py  test_destroy_tf_vars.py  test_ip_detection.py  test_password.py  test_rdp_file.py  test_run_id.py
