[project]
name = "azure-windows"
version = "0.1.0"
description = "Ephemeral Azure Windows VMs for desktop-app testing from macOS."
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12",
    "rich>=13.7",
    "requests>=2.32",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 100
target-version = "py311"
