[project]
name = "azure-windows"
version = "0.1.0"
description = "Ephemeral Azure Windows VMs for desktop-app testing from macOS."
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12",
    "rich>=13.7",
    "requests>=2.32",
    "keyring>=24",
]

[tool.uv]
package = false

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.12",
    "ruff>=0.15.17",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
